ingress/nginx-ingress/3.app-test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 
  name: app
  namespace: nginx-ingress
spec:
  tls:
    - hosts:
      - anhgrew.test
      secretName: default-server-secret

    # - hosts:
    #   - otherdomain.coms
    #   secretName: otherssl-ssl
  rules:
  - host: anhgrew.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
